--- a/app/views/home/blog.html.haml
+++ b/app/views/home/blog.html.haml
@@ -1,15 +1,8 @@
 %h1 Blog
 %p Use Problems to Learn CS.
 %p Use CS to Solve Problems.
-%h2 This site offers an opionated way to learn CS.
+%h2 This site describes my efforts to learn CS concepts through the struggle of writing software.
 %p Traditional CS education presents concepts first.
-%p Then you apply the concepts to solve homework problems.
-%p This site, cs101.us, is different.
-%p We show you the homework problem first.
-%p Then we show you the concepts and code needed to solve the problem.
-%p
-  After you are exposed to hundreds or thousands of solutions to homework problems,
-  you should gain some understanding of CS.
-%p Also you will become skilled at using CS to solve problems.
-
+%p Then you are expected to apply the concepts to solve problems.
+%p I think that is a good way to learn but one enhancement I offer is to describe the my efforts to building solutions.
 
