--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -1,6 +1,6 @@
 %h1 About
 %p Use Problems to Learn CS.
 %p Use CS to Solve Problems.
-%p This site uses CS homework problems to teach you CS.
+%p This site is a diary of my CS Training efforts.
 
 
