--- a/app/views/home/blog.html.haml
+++ b/app/views/home/blog.html.haml
@@ -1,8 +1,8 @@
 %h1 Blog
 %p Use Problems to Learn CS.
 %p Use CS to Solve Problems.
-%h2 This site describes my efforts to learn CS concepts through the struggle of writing software.
+%p This site describes my efforts to learn CS concepts through the struggle of writing software.
 %p Traditional CS education presents concepts first.
 %p Then you are expected to apply the concepts to solve problems.
-%p I think that is a good way to learn but one enhancement I offer is to describe the my efforts to building solutions.
+%p I think that is a good way to learn but one enhancement I offer is to describe the my efforts to build solutions.
 
