--- a/app/views/home/blog.html.haml
+++ b/app/views/home/blog.html.haml
@@ -6,5 +6,7 @@
 %ul
   %li I describe my understanding of CS concepts
   %li I describe my efforts to build software to solve problems
+  %li You can learn from my struggles
+  
 
 
