--- a/app/views/layouts/_links_top.html.haml
+++ b/app/views/layouts/_links_top.html.haml
@@ -5,6 +5,5 @@ Computer Science 101
 %a(href='/blog') Blog
 %a(href='/contact') Contact
 %a(href='/home/links') Links
-
-
+%a(href='/lessons') Lessons
 
