--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -15,7 +15,6 @@
   %a(href='https://console.developers.google.com/freetrial' target='x')
     https://console.developers.google.com/freetrial
   
-
 %p
   I logged into my gmail-account and tried the above link.
 
@@ -26,3 +25,83 @@
 
 %p
   I hope that you can also get that credit.
+
+%p Next, I visited the URL listed below:
+
+%p
+  %a(href='https://console.cloud.google.com/projectcreate' target='x')
+    https://console.cloud.google.com/projectcreate
+
+%p I used that page to create a project called cpb100.
+
+%p Google needed 4 minutes to create project cpb100.
+
+%p Although I wanted the name to be cp100, Google added some text to the end of the name:
+
+%p cpb100-195004
+
+%p Google created a URL for the project:
+%p
+  %a(href='https://console.cloud.google.com/home/activity?project=cpb100-195004' target='x')
+    https://console.cloud.google.com/home/activity?project=cpb100-195004
+%p In the upper right I saw a blue-button called "UPGRADE".
+%p I clicked the button.
+%p Next, I accepted the upgrade offer because I wanted access to services required by future training sessions.
+
+%p Then I verified that the "hamburger-link" in the upper-left behaved well when I clicked it.
+
+%p It did behave well and I considered my interaction with this page to be done:
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-free-trial/index.html' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-free-trial/index.html
+%hr/
+%p I returned to the URL listed below:
+%p
+  %a(href='https://codelabs.developers.google.com/cpb100' target='x')
+    https://codelabs.developers.google.com/cpb100
+%p Next, I clicked the next link in the series:
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-compute-engine/index.html' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-compute-engine/index.html
+
+%p I quickly clicked through the first two links in that page and landed at this URL:
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-compute-engine/index.html#2' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-compute-engine/index.html#2
+
+%p It asked me to click the upper-left-hamburger-link in my project page; I did that.
+%p Then I followed the advice to click the "Compute Engine" link on the left:
+%p
+  %a(href='https://console.cloud.google.com/compute' target='x')
+    https://console.cloud.google.com/compute
+%p I clicked the "Create"  button.
+%p It served me a form from this URL:
+%p
+  %a(href='https://console.cloud.google.com/compute/instancesAdd' target='x')
+    https://console.cloud.google.com/compute/instancesAdd
+
+%p I clicked radio-button: "Allow full access to all Cloud APIs"
+
+%p I deviated from the tutorial and clicked the link: "SSH keys"
+
+%p My intent was to ease my ability to ssh into the GCP-Instance from a shell in my laptop.
+%p The text I mouse-copied into the GCP SSH-key-form came from this file:
+%p ~/.ssh/id_rsa.pub
+%p It looks like this:
+.syntax
+  %pre
+    %code
+      ssh-rsa
+      AAAAB3NzaC1yc2EAAAADAQABAAABAQC8cbLxnaqPPznHz9DgMq
+      xg38LPxRTRT1qjyQH0cGEHHtHVYHgPdCNvW++0ArCuJVxiQ7fx
+      XvK2cYThurYozSkI6uwxVSPBoJgsLmLPvhc+JshDHi7SgtWl4b
+      8JZlnL5dMPQNo61p/qGmqZpKxXYJanY0zN4WnB17vlnVFhXL2j
+      3U3YKvifIC8a6gRKitG+XFGmj5sZKbJuqbnfhD93ytcRGV+rEM
+      VipYAl2XBs27K0VGwK+u3NOOerWXjRrgqIo9Frk7C4rps/dMYd
+      56QKxnVumr24TUJ0TlymsCYkhD9qDHyJHxGTyN5BAzUpryphd7
+      QDLZn+Rdrm4Ssu8/jclLPH
+      dan@ubu42
+
+%p Next, I clicked the blue "Create" button.
+
+%hr/
