--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -139,3 +139,14 @@
 %p The above shell commands worked perfectly in my new GCP instance.
 
 %hr/
+
+%p I returned to the URL listed below:
+%p
+  %a(href='https://codelabs.developers.google.com/cpb100' target='x')
+    https://codelabs.developers.google.com/cpb100
+%p Next, I clicked the next link in the series:
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage/index.html' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage/index.html
+  
+%hr/
