--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -148,5 +148,21 @@
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage/index.html' target='x')
     https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage/index.html
-  
+
+%p I studied the page there and clicked through until I landed at this URL:
+
+https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage/index.html#2
+
+%p I verified that I could ssh into the GCP instance I had created earlier.
+
+%p After the instance served me a shell prompt, I issued a shell command:
+
+.syntax
+  %pre
+    %code.bash git clone https://github.com/GoogleCloudPlatform/training-data-analyst
+
+%p That command worked well.
+
+
+
 %hr/
