--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -163,6 +163,15 @@ https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage/index.html#
 
 %p That command worked well.
 
+%p I ran more shell commands:
+
+.syntax
+  %pre
+    %code.bash
+      cd training-data-analyst/CPB100/lab2b
+      less ingest.sh
+      bash ingest.sh
+      head earthquakes.csv
 
 
 %hr/
