--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -325,4 +325,20 @@
 
 %p Google should not force me to login to gmail in order to see publicly-shared content.
 
+
+%p I returned to the cpb100 page:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage/index.html#6' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage/index.html#6
+
+%p I clicked the next node in the page and landed on this URL:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage/index.html#7' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage/index.html#7
+
+%p I followed the instructions in that page to delete my GCP instance.
+
+
 %hr/
