--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -226,7 +226,6 @@
 %p
   %a(href='https://console.cloud.google.com' target='x')
     https://console.cloud.google.com
-  
 
 %p I clicked the button.
 
@@ -321,10 +320,9 @@
 
 %p The google server asked me to authenticate.
 
-%p I sense that to be a bug or some evil product-management.
-
 %p Google should not force me to login to gmail in order to see publicly-shared content.
 
+%p Based on this "feature", AWS-S3 is clearly superior to GCP-Storage.
 
 %p I returned to the cpb100 page:
 
@@ -340,5 +338,52 @@
 
 %p I followed the instructions in that page to delete my GCP instance.
 
+%hr/
+
+%p I returned to the URL listed below:
+%p
+  %a(href='https://codelabs.developers.google.com/cpb100' target='x')
+    https://codelabs.developers.google.com/cpb100
+%p Next, I clicked the next link in the series:
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql
+
+%p I studied the page it served me:
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#0' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#0
+  
+%p I studied the next page in sequence:
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#1' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#1
+  
+%p I studied the next page in sequence:
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#2' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#2
+  
+%p I visited my GCP-console page by visiting this URL:
+
+%p
+  %a(href='https://console.cloud.google.com' target='x')
+    https://console.cloud.google.com
+  
+%p I found the tiny "Cloud-Shell" button near the upper-left.
+
+%p I hovered it to see: "Activate Google Cloud Shell".
+
+%p I clicked it.
+
+%p A dark window appeared at the bottom.
+
+%p After 15 seconds, a white shell prompt appeared in the window.
+
+%p I tried some shell commands and saw this:
+
+.syntax
+  %pre
+    =render 'lesson001b'
 
 %hr/
