--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -386,4 +386,15 @@
   %pre
     =render 'lesson001b'
 
+%p I returned my attention to this page:
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#2' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#2
+
+%p I returned to the Cloud-Shell and typed a shell command which looked familiar:
+
+.syntax
+  %pre
+    %code.bash git clone https://github.com/GoogleCloudPlatform/training-data-analyst
+  
 %hr/
