--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -396,5 +396,13 @@
 .syntax
   %pre
     %code.bash git clone https://github.com/GoogleCloudPlatform/training-data-analyst
+
+%p That worked well; I entered another shell command:
+
+.syntax
+  %pre
+    %code.bash cd training-data-analyst/CPB100/lab3a
+
+
   
 %hr/
