--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -403,6 +403,18 @@
   %pre
     %code.bash cd training-data-analyst/CPB100/lab3a
 
+%p I entered another shell command:
+
+.syntax
+  %pre
+    %code.bash less cloudsql/table_creation.sql
+
+%p I saw some SQL syntax:
+
+.syntax
+  %pre
+    =render 'lesson001c'
+
 
   
 %hr/
