--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -447,7 +447,13 @@
   %li An Accommodation has 0 or more Ratings
   %li An Accommodation has 0 or more Recommendations
   
-%p 
+%p The tables might support these scenarios:
+
+%ul
+  %li When a user rates a house, the app adds a row to Rating.
+  %li When admin adds a house for rent, the app adds a row to Accommodation.
+  %li When ML-app predicts a user rating for a house, ML-app adds a row to Recommendation.
+  
   
   
   
