--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -454,9 +454,26 @@
   %li When admin adds a house for rent, the app adds a row to Accommodation.
   %li When ML-app predicts a user rating for a house, ML-app adds a row to Recommendation.
   
-  
-  
-  
-  
+%p In Cloud-Shell I ran another command and collected the output:
+
+.syntax
+  %pre
+    =render 'lesson001d'
+
+%p I see in the above output that we have accommodations and ratings but no recommendations yet.
+
+%p That completed my interaction with the page below:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#2' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#2
+
+%p I navigated to the next page in the sequence:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#3' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#3
+
+
   
 %hr/
