--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -486,6 +486,16 @@
   %pre
     =render 'lesson001e'
 
+%p I verified success of the above command by visiting an appropriate URL:
+%p
+  %a(href='https://console.cloud.google.com/storage/browser/cs101feb2018/sql/' target='x')
+    https://console.cloud.google.com/storage/browser/cs101feb2018/sql/
+  
+%p I navigated to the next page in the sequence:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#4' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#4
 
   
 %hr/
