--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -497,5 +497,44 @@
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#4' target='x')
     https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#4
 
-  
+%p I studied that page.
+
+%p I visited this URL:
+
+%p
+  %a(href='https://console.cloud.google.com' target='x')
+    https://console.cloud.google.com
+
+%p I clicked the upper-left-hamburger-link and from there clicked: "SQL".
+
+%p It served me a page describing: "Cloud SQL Instances"
+
+%ul
+  %li Cloud SQL instances are fully managed relational:
+  %li MySQL databases
+  %li PostgreSQL databases
+
+%p I clicked the blue: "Create instance" button.
+
+%p In the next page I picked the MySQL radio-button.
+
+%p I clicked the blue: "Next" button.
+
+%p In the next page I clicked the blue: "Choose Second Generation" button.
+
+%p The next page landed me in a field: "Instance ID".
+
+%p I entered string: "rentals".
+
+%p I entered root password: "root".
+
+%p I clicked the blue "Create" button.
+
+%p GCP served me a page with information about my new db instance:
+
+%ul
+  %li MySQL 2nd Gen 5.7	35.226.122.211	cpb100-195004:us-central1:rentals
+  %li IP: 35.226.122.211
+  %li Instance connection name: cpb100-195004:us-central1:rentals
+
 %hr/
