--- a/app/views/lessons/_lesson001b.erb
+++ b/app/views/lessons/_lesson001b.erb
@@ -32,21 +32,21 @@ cs101@cpb100-195004:~$
 
 
 cs101@cpb100-195004:~$ ifconfig
-docker0: flags=4099<UP,BROADCAST,MULTICAST>  mtu 1500
+docker0: flags=4099&lt;UP,BROADCAST,MULTICAST>  mtu 1500
         inet 172.18.0.1  netmask 255.255.0.0  broadcast 0.0.0.0
         ether 02:42:77:65:a7:42  txqueuelen 0  (Ethernet)
         RX packets 0  bytes 0 (0.0 B)
         RX errors 0  dropped 0  overruns 0  frame 0
         TX packets 0  bytes 0 (0.0 B)
         TX errors 0  dropped 0 overruns 0  carrier 0  collisions 0
-eth0: flags=4163<UP,BROADCAST,RUNNING,MULTICAST>  mtu 1460
+eth0: flags=4163&lt;UP,BROADCAST,RUNNING,MULTICAST>  mtu 1460
         inet 172.17.0.2  netmask 255.255.0.0  broadcast 0.0.0.0
         ether 02:42:ac:11:00:02  txqueuelen 0  (Ethernet)
         RX packets 366  bytes 105824 (103.3 KiB)
         RX errors 0  dropped 0  overruns 0  frame 0
         TX packets 326  bytes 54222 (52.9 KiB)
         TX errors 0  dropped 0 overruns 0  carrier 0  collisions 0
-lo: flags=73<UP,LOOPBACK,RUNNING>  mtu 65536
+lo: flags=73&lt;UP,LOOPBACK,RUNNING>  mtu 65536
         inet 127.0.0.1  netmask 255.0.0.0
         loop  txqueuelen 0  (Local Loopback)
         RX packets 49  bytes 3813 (3.7 KiB)
