--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -555,4 +555,20 @@
   %pre
     =render 'lesson001f'
 
+%p I waited two hours.
+
+%p GCP terminated my Cloud Shell session.
+
+%p I started a new Cloud Shell session.
+
+%p I ran shell commands:
+
+.syntax
+  %pre
+    %code.bash
+      cd ~/training-data-analyst/CPB100/lab3a
+      bash 
+
+
+
 %hr/
