--- a/app/views/lessons/_lesson001d.erb
+++ b/app/views/lessons/_lesson001d.erb
@@ -1,7 +1,7 @@
 <code class='bash'>
 cs101@cpb100-195004:~/training-data-analyst/CPB100/lab3a$
 cs101@cpb100-195004:~/training-data-analyst/CPB100/lab3a$ head cloudsql/*.csv
-==> cloudsql/accommodation.csv <==
+==> cloudsql/accommodation.csv &lt;==
 1,Comfy Quiet Chalet,Vancouver,50,3,3.1,cottage
 2,Cozy Calm Hut,London,65,2,4.1,cottage
 3,Agreable Calm Place,London,65,4,4.8,house
@@ -12,7 +12,7 @@ cs101@cpb100-195004:~/training-data-analyst/CPB100/lab3a$ head cloudsql/*.csv
 8,Giant Quiet Fortress,San Francisco,3400,12,4.1,castle
 9,Giant Peaceful Palace,London,1500,20,3.5,castle
 10,Sizable Calm Country House,Auckland,650,9,4.9,mansion
-==> cloudsql/rating.csv <==
+==> cloudsql/rating.csv &lt;==
 10,1,1
 18,1,2
 13,1,1
