--- a/app/views/lessons/_lesson001e.erb
+++ b/app/views/lessons/_lesson001e.erb
@@ -1,11 +1,11 @@
 <code class='bash'>
-bikle101@cpb100-195004:~/training-data-analyst/CPB100/lab3a$ gsutil cp cloudsql/* gs://cs101feb2018/sql/
+cs101@cpb100-195004:~/training-data-analyst/CPB100/lab3a$ gsutil cp cloudsql/* gs://cs101feb2018/sql/
 Copying file://cloudsql/accommodation.csv [Content-Type=text/csv]...
 Copying file://cloudsql/rating.csv [Content-Type=text/csv]...
 Copying file://cloudsql/table_creation.sql [Content-Type=application/x-sql]...
 - [3 files][ 14.2 KiB/ 14.2 KiB]
 Operation completed over 3 objects/14.2 KiB.
-bikle101@cpb100-195004:~/training-data-analyst/CPB100/lab3a$
-bikle101@cpb100-195004:~/training-data-analyst/CPB100/lab3a$
-bikle101@cpb100-195004:~/training-data-analyst/CPB100/lab3a$
+cs101@cpb100-195004:~/training-data-analyst/CPB100/lab3a$
+cs101@cpb100-195004:~/training-data-analyst/CPB100/lab3a$
+cs101@cpb100-195004:~/training-data-analyst/CPB100/lab3a$
 </code>
