--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -547,7 +547,7 @@
   %pre
     %code.bash
       cd ~/training-data-analyst/CPB100/lab3a
-      bash ./find_my_ip.sh
+      bash find_my_ip.sh
 
 %p I saw this:
 
@@ -567,7 +567,14 @@
   %pre
     %code.bash
       cd ~/training-data-analyst/CPB100/lab3a
-      bash 
+      bash authorize_cloudshell.sh
+      bash find_my_ip.sh
+
+%p I saw this:
+
+.syntax
+  %pre
+    =render 'lesson001g'
 
 
 
