--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -577,5 +577,43 @@
     =render 'lesson001g'
 
 
+%p I navigated to the next page in the sequence:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#5' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#5
+
+%p I studied that page.
+
+
+%p The page listed 4 steps.
+
+%p To start step 1, I navigated to the URL listed below:
+
+%p
+  %a(href='https://console.cloud.google.com/sql' target='x')
+    https://console.cloud.google.com/sql
+
+%p I clicked the link called "rentals" which is the name of the Instance I created earlier.
+
+%p I clicked "Import" at the top.
+
+%p GCP served a page: "Import data from Cloud Storage"
+
+%p I clicked the button named: "Browse".
+
+%p GCP served a link named: "cs101feb2018" which is the name of the bucket I created earlier.
+
+%p I clicked the "cs101feb2018" link.
+
+%p GCP showed three files and a folder named "sql" in that bucket.
+
+%p I clicked "table_creation.sql" in that folder.
+
+%p GCP activated a blue button named "Import".
+
+%p I clicked the button.
+
+%p GCP got busy for 10 seconds and then indicated success with a green-check-mark.
 
 %hr/
