--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -585,7 +585,6 @@
 
 %p I studied that page.
 
-
 %p The page listed 4 steps.
 
 %p To start step 1, I navigated to the URL listed below:
@@ -615,5 +614,68 @@
 %p I clicked the button.
 
 %p GCP got busy for 10 seconds and then indicated success with a green-check-mark.
+
+
+
+
+%p I navigated to the next page in the sequence:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#5' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html#5
+
+%p I studied that page.
+
+%p The page listed 3 steps.
+
+%p To start step 1, I navigated to the URL listed below:
+
+%p
+  %a(href='https://console.cloud.google.com/sql' target='x')
+    https://console.cloud.google.com/sql
+
+%p I clicked the link called "rentals" which is the name of the Instance I created earlier.
+
+%p I clicked "Import" at the top.
+
+%p I browsed to accommodation.csv and selected it.
+
+%p GCP served me a page: "Import data from Cloud Storage"
+
+%p I selected radio-button: "CSV".
+
+%p I selected database: "recommendation_spark".
+
+%p In the next field, I entered string: "Accommodation".
+
+%p GCP responded by activating the blue "Import" button.
+
+%p I clicked the button.
+
+%p GCP quickly served me a page named "Instance details".
+
+%p Quickly after that it served a green-check-mark to indicate success.
+
+%p I clicked "Import" at the top.
+
+%p I browsed to rating.csv and selected it.
+
+%p GCP served me a page: "Import data from Cloud Storage"
+
+%p I selected radio-button: "CSV".
+
+%p I selected database: "recommendation_spark".
+
+%p In the next field, I entered string: "Rating".
+
+%p GCP responded by activating the blue "Import" button.
+
+%p I clicked the button.
+
+%p GCP quickly served me a page named "Instance details".
+
+%p Quickly after that it served a green-check-mark to indicate success.
+
+
 
 %hr/
