--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -712,4 +712,12 @@
   %pre
     =render 'lesson001h'
 
+%p At the MySQL prompt I entered a command:
+
+.syntax
+  %pre
+    %code.bash use recommendation_spark;
+
+
+
 %hr/
