--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -707,7 +707,6 @@
 
 %p I saw this:
 
-
 .syntax
   %pre
     =render 'lesson001h'
@@ -717,6 +716,20 @@
 .syntax
   %pre
     %code.bash use recommendation_spark;
+
+%p I wanted to see tables so I typed this:
+
+.syntax
+  %pre
+    %code.bash show tables;
+
+%p I verifed that ratings.csv was loaded into ratings table:
+
+.syntax
+  %pre
+    =render 'lesson001i'
+
+
 
 
 
