--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -735,7 +735,13 @@
   %pre
     =render 'lesson001j'
 
+%p That ended my interaction with the CPB100-node I call: "Setup rentals data in Cloud SQL".
 
+%p If I want to return to that node its URL is listed below:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql/index.html
 
 
 %hr/
