--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -3,10 +3,29 @@
 %p
   %a(href='https://codelabs.developers.google.com/cpb100' target='x')
     https://codelabs.developers.google.com/cpb100
+
+%p On that page I assume the correct ordering of some links is listed below:
+
+%ul
+  %li
+    %a(href='https://codelabs.developers.google.com/codelabs/cpb100-free-trial' target='x')
+      https://codelabs.developers.google.com/codelabs/cpb100-free-trial
+  %li
+    %a(href='https://codelabs.developers.google.com/codelabs/cpb100-compute-engine' target='x')
+      https://codelabs.developers.google.com/codelabs/cpb100-compute-engine
+  %li
+    %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage' target='x')
+      https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage
+  %li
+    %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql' target='x')
+      https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql
+  
+
 %p Next, I clicked this link:
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-free-trial/index.html' target='x')
     https://codelabs.developers.google.com/codelabs/cpb100-free-trial/index.html
+    
 %p I saw a simple path through 4 pages.
 
 %p The third page had a noteworthy URL I used to get $300 of cloud-credit from Google:
