--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -19,7 +19,20 @@
   %li
     %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql' target='x')
       https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql
+  %li
+    %a(href='https://codelabs.developers.google.com/codelabs/cpb100-dataproc/' target='x')
+      https://codelabs.developers.google.com/codelabs/cpb100-dataproc/
+  %li
+    %a(href='https://codelabs.developers.google.com/codelabs/cpb100-bigquery-dataset/' target='x')
+      https://codelabs.developers.google.com/codelabs/cpb100-bigquery-dataset/
+  %li
+    %a(href='https://codelabs.developers.google.com/codelabs/cpb100-tensorflow/' target='x')
+      https://codelabs.developers.google.com/codelabs/cpb100-tensorflow/
+  %li
+    %a(href='https://codelabs.developers.google.com/codelabs/cpb100-translate-api/' target='x')
+      https://codelabs.developers.google.com/codelabs/cpb100-translate-api/
   
+
 
 %p Next, I clicked this link:
 %p
