--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -31,7 +31,18 @@
   %li
     %a(href='https://codelabs.developers.google.com/codelabs/cpb100-translate-api' target='x')
       https://codelabs.developers.google.com/codelabs/cpb100-translate-api
-  
+  %li
+    %a(href='https://codelabs.developers.google.com/codelabs/cpb100-serverless-ingest' target='x')
+      https://codelabs.developers.google.com/codelabs/cpb100-serverless-ingest
+  %li
+    %a(href='https://codelabs.developers.google.com/codelabs/cpb100-bigquery-dataset' target='x')
+      https://codelabs.developers.google.com/codelabs/cpb100-bigquery-dataset
+  %li
+    %a(href='https://codelabs.developers.google.com/codelabs/cpb100-distributed-landsat' target='x')
+      https://codelabs.developers.google.com/codelabs/cpb100-distributed-landsat
+  %li
+    %a(href='https://codelabs.developers.google.com/codelabs/cpb100-datalab' target='x')
+      https://codelabs.developers.google.com/codelabs/cpb100-datalab
 
 
 %p Next, I clicked this link:
