--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -44,6 +44,21 @@
     %a(href='https://codelabs.developers.google.com/codelabs/cpb100-datalab' target='x')
       https://codelabs.developers.google.com/codelabs/cpb100-datalab
 
+%p The above links are discussed below:
+
+free-trial
+compute-engine
+cloud-storage
+cloud-sql
+dataproc
+bigquery-dataset
+tensorflow
+translate-api
+serverless-ingest
+bigquery-dataset
+distributed-landsat
+datalab
+
 
 %p Next, I clicked this link:
 %p
