--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -45,8 +45,11 @@
       https://codelabs.developers.google.com/codelabs/cpb100-datalab
 
 %p The above links are discussed below:
+%ul
+  %li
+    %a(href='#free-trial') free-trial
 
-free-trial
+
 compute-engine
 cloud-storage
 cloud-sql
@@ -60,7 +63,9 @@ distributed-landsat
 datalab
 
 
-%p Next, I clicked this link:
+%h2#free-trial Free-Trial
+
+%p#free-trial Next, I clicked this link:
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-free-trial/index.html' target='x')
     https://codelabs.developers.google.com/codelabs/cpb100-free-trial/index.html
