--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -49,8 +49,10 @@
   %li
     %a(href='#free-trial') free-trial
 
+  %li
+    %a(href='#compute-engine') compute-engine
 
-compute-engine
+
 cloud-storage
 cloud-sql
 dataproc
@@ -122,6 +124,10 @@ datalab
 %p
   %a(href='https://codelabs.developers.google.com/cpb100' target='x')
     https://codelabs.developers.google.com/cpb100
+
+
+%h2#compute-engine Compute-Engine
+
 %p Next, I clicked the next link in the series:
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-compute-engine/index.html' target='x')
