--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -52,8 +52,12 @@
   %li
     %a(href='#compute-engine') compute-engine
 
+  %li
+    %a(href='#cloud-storage') cloud-storage
+  %li
+    %a(href='#cloud-sql') cloud-sql
 
-cloud-storage
+
 cloud-sql
 dataproc
 bigquery-dataset
@@ -213,6 +217,10 @@ datalab
 %p
   %a(href='https://codelabs.developers.google.com/cpb100' target='x')
     https://codelabs.developers.google.com/cpb100
+
+
+%h2#cloud-storage Cloud-Storage
+
 %p Next, I clicked the next link in the series:
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage/index.html' target='x')
@@ -413,6 +421,10 @@ datalab
 %p
   %a(href='https://codelabs.developers.google.com/cpb100' target='x')
     https://codelabs.developers.google.com/cpb100
+
+
+%h2#cloud-sql Cloud-Sql
+
 %p Next, I clicked the next link in the series:
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-sql' target='x')
