--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -223,8 +223,8 @@ datalab
 
 %p Next, I clicked the next link in the series:
 %p
-  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage/index.html' target='x')
-    https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage/index.html
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-cloud-storage
 
 %p I studied the page there and clicked through until I landed at this URL:
 
